--- a/.github/workflows/api-compatibility.yml
+++ b/.github/workflows/api-compatibility.yml
@@ -1,28 +1,31 @@
 name: API Compatibility Tests
 
+permissions:
+  contents: read
+
 on:
   pull_request:
     branches: [main, develop]
   push:
     branches: [main, develop]
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 jobs:
   api-compatibility:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955  # v4
         with:
           fetch-depth: 0
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@19bb51245e9c80abacb2e91cc42b33fa478b8639  # v4
         with:
           go-version: '1.24.6'
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435  # v3
 
       - name: Verify Docker is available
         run: docker --version && docker ps
