--- a/.github/workflows/build-compat-test-images.yml
+++ b/.github/workflows/build-compat-test-images.yml
@@ -19,7 +19,7 @@ jobs:
   build-compat-test-image:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955  # v4
         with:
           fetch-depth: 0
 
@@ -27,7 +27,7 @@ jobs:
         uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435  # v3
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef  # v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
