--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,4 +9,4 @@
 # are often repeated in package-level definitions.
 * @renaynay @Wondertan @vgonkivs @walldiss @gupadhyaya
 
-docs/adr @adlerjohn @liamsi
+docs/adr @liamsi
