add docs owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,4 +9,4 @@
 # are often repeated in package-level definitions.
 * @renaynay @Wondertan @vgonkivs @walldiss
 
-docs/adr @liamsi
+docs/adr @liamsi @walldiss
