chore(ci): pin golangci-lint to v2.10.0 and fix new gosec warnings
Pin golangci-lint version in CI to prevent unexpected lint failures
from new rules introduced in newer versions. Fix two new gosec
warnings (G117, G703) introduced in v2.10.0.

--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -44,7 +44,7 @@ jobs:
         uses: golangci/golangci-lint-action@v9.2.0
         with:
           args: --timeout 10m
-          version: latest
+          version: v2.10.0
 
   lint-imports:
     needs: [setup]
