ci: run unit tests only on packages affected by PR changes
Add scripts/affected-packages.sh which computes the set of directly
changed Go packages plus their transitive reverse dependencies.
On pull_request events the CI tests only the affected set; on pushes
to main all packages are tested. Falls back to the full package list
when go.mod/go.sum changes or no Go files were modified.

--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -119,8 +119,26 @@ jobs:
         with:
           go-version: ${{ inputs.go-version }}
 
+      - name: Compute packages to test
+        id: pkgs
+        run: |
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            echo "Running affected packages only"
+            ./scripts/affected-packages.sh origin/${{ github.base_ref }} > /tmp/test-pkgs.txt
+          else
+            go list ./... | grep -v nodebuilder/tests > /tmp/test-pkgs.txt
+          fi
+          echo "$(cat /tmp/test-pkgs.txt | wc -l | tr -d ' ') packages selected" >&2
+          cat /tmp/test-pkgs.txt
+
       - name: run unit tests
-        run: make test-unit ENABLE_VERBOSE=${{ needs.setup.outputs.debug }}
+        run: |
+          PKGS=$(cat /tmp/test-pkgs.txt | tr '\n' ' ')
+          if [[ "${{ needs.setup.outputs.debug }}" == "true" ]]; then
+            go test -v -covermode=atomic -coverprofile=coverage.txt $PKGS | tee debug.log
+          else
+            go test -covermode=atomic -coverprofile=coverage.txt $PKGS
+          fi
 
       - name: Upload unit test output
         uses: actions/upload-artifact@v4
